--- a/Skwerl/Skwerl.csproj
+++ b/Skwerl/Skwerl.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Models\Task.cs" />
     <Compile Include="Models\TaskList.cs" />
     <Compile Include="Controllers\TasksController.cs" />
+    <Compile Include="Models\TaskListRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
